#add assets module
